--- a/jsspillmal/index.html
+++ b/jsspillmal/index.html
@@ -14,9 +14,10 @@
   </div>
   <div id="death-screen">
     <h1>Game Over</h1>
-    <p>Your high Score: <span id="highScore"></span></p>
-    <p>Your Score: <span id="score"></span></p>
-    <button id="restart-button">Restart</button>
+    <p>Your high score: <span id="highScore"></span></p>
+    <p>Your score: <span id="score"></span></p>
+    <button id="retry-button">Retry game</button>
+    <button id="reset-button">Reset high Score</button>
   </div>
   <script src="script.js"></script>
 </body>
